feat: Reimplement order summary and detail queries #11